# IAA

./: .gitignore  README.md
finetuning_data/: labels.csv
lab 2/: lab2_iaa_v2.ipynb
lab 2/data_collection/: README.md  package.xml
lab 2/test/src/: steering_inference.py
lab1/: .gitignore  Dockerfile  README.md
lab1/launchers/: collect.sh  my_publisher.sh
lab2/rapport/: rapport.aux  rapport.out  rapport.tex  rapport.toc
lab2/rapport/chapitres/: Code.tex  Conclusion.tex  DatasetStudy.tex  GlobalPerformance.tex  ModelChoice.tex  Partie_1.tex  Partie_3.tex  Partie_4.tex  Partie_5.tex  Partie_6.tex  PremierePage.tex  Probleme.tex  constantes.tex
lab2_part1/: lab2_part1.ipynb
lab2_part1/data_collection/src/: log_duckiebot_data.py
lab2_part1/test/: package.xml
lab2_part2/: lab2_part2.ipynb
lab2_part2/ros-driver-package/: CMakeLists.txt  README.md  package.xml
lab2_part2/ros-driver-package/src/: driver_node.py
lab2_part2/tcp-inference-server/: README.md  main_socket.py  requirements.txt  tensorrt_parser.py
lab2_part2/tcp-inference-server/models/: yolov11_wins_int8.onnx
lab3/: .gitignore  README.md  main.py  manual_control.py
lab3/agent/: __init__.py  ppo_agent.py
lab3/duckie_env/: __init__.py  duckiebot_wrapper.py  factory.py  lane_following_env.py
lab3/map/: MapGraph.py  README.md  __init__.py  iaa26_lab3.yaml  iaa26_lab3_graph.yaml  iaa26_lab3_graphviz.txt  iaa26_labo3.ascii
lab3/reward/: __init__.py  reward_functions.py
lab3/training/: __init__.py  evaluator.py  trainer.py
