<?xml version="1.0"?>
<package>
    <name>ros_driver_package</name>
    <version>1.0.0</version>
    <description>Driver node that uses a TCP inference server</description>

    <maintainer email="your@email.com">Your Name</maintainer>
    <license>GPLv3</license>

    <buildtool_depend>catkin</buildtool_depend>
    
    <build_depend>rospy</build_depend>
    <build_depend>rospack</build_depend>
    <build_depend>sensor_msgs</build_depend>
    <build_depend>cv_bridge</build_depend>
    <build_depend>duckietown_msgs</build_depend>

    <run_depend>rospy</run_depend>
    <run_depend>rospack</run_depend>
    <run_depend>sensor_msgs</run_depend>
    <run_depend>cv_bridge</run_depend>
    <run_depend>duckietown_msgs</run_depend>
</package>
